# real-world-bench

./: LICENSE  README.md
laser_manipulation/: CMakeLists.txt  package.xml
laser_manipulation/include/: laser_manipulation_node.hpp
laser_manipulation/launch/: extra.launch  standalone.launch  start_arena.launch  start_pedsim.launch
laser_manipulation/scripts/: agent_pos_gen.py  agents_visualizer.py
laser_manipulation/src/: laser_manipulation_node.cpp
yocs_math_toolkit/: CMakeLists.txt  package.xml
yocs_math_toolkit/include/yocs_math_toolkit/: common.hpp  geometry.hpp
yocs_math_toolkit/src/lib/: geometry.cpp
